[package]
name = "driver-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
wmi = "0.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
fs_extra = "1.3"
regex = "1.0"
serde_json = "1.0"
sha2 = "0.10"
